# pytorch-sparse-utils

./: .gitignore  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml  tests.yml
docs/: batching.md  index.md  indexing.md  me_sp.md  shape_ops.md  utils.md
pytorch_sparse_utils/: __init__.py  conversion.py  imports.py  minkowskiengine.py  misc.py  shape_ops.py  spconv.py  validation.py
pytorch_sparse_utils/batching/: __init__.py  batch_utils.py  nested.py
pytorch_sparse_utils/batching/batch_ops/: __init__.py  batch_topk.py  lexsort_nd.py
pytorch_sparse_utils/indexing/: __init__.py  basics.py  indexing.py  misc.py  scatter.py  sparse_index_select.py  unique.py  utils.py
pytorch_sparse_utils/ops/: __init__.py
pytorch_sparse_utils/ops/linear/: autograd.py  linear.py
pytorch_sparse_utils/ops/subset_attn/: __init__.py  autograd.py  autograd_helpers.py  rotary_encoding.py  subset_attn.py
pytorch_sparse_utils/shape_ops/: __init__.py  helpers.py  ops.py
pytorch_sparse_utils/utils/: __init__.py  batch_topk.py  lexsort_nd.py
tests/: __init__.py  conftest.py  test_conversion.py  test_minkowski_spconv.py  test_misc.py  test_shape_ops.py
tests/autograd_ops/sparse_linear/: conftest.py  test_caller_fn.py  test_gradcheck.py
tests/autograd_ops/subset_attn/: conftest.py  input_generation.py  test_caller_fn.py  traceable_attn.py
tests/batching/: test_utils.py
tests/indexing/: test_indexing.py  test_indexing_properties.py  test_misc.py  test_script_funcs.py  test_sparse_index_select.py
tests/shape_ops/: test_reshape.py
tests/utils/: test_batch_topk.py  test_lexsort_nd.py
(+12 files in other folders)
